force-app/main/default/objects/IBM_AccountServices__x/IBM_AccountServices__x.object-meta.xml
<CustomObject>
    <description>IBM_AccountServices</description>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>IBM_AccountServices</externalName>
    <label>IBM_AccountServices</label>
    <pluralLabel>IBM_AccountServices</pluralLabel>
</CustomObject>