force-app/main/default/objects/IBM_AccountServices__x/fields/BankIssuedCreditCard__c.field-meta.xml
<CustomField>
    <fullName>BankIssuedCreditCard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BankIssuedCreditCard</description>
    <externalDeveloperName>BankIssuedCreditCard</externalDeveloperName>
    <label>BankIssuedCreditCard</label>
    <type>Checkbox</type>
</CustomField>