force-app/main/default/objects/IBM_AccountServices__x/fields/BudgetManagement__c.field-meta.xml
<CustomField>
    <fullName>BudgetManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BudgetManagement</description>
    <externalDeveloperName>BudgetManagement</externalDeveloperName>
    <label>BudgetManagement</label>
    <type>Checkbox</type>
</CustomField>