force-app/main/default/objects/IBM_AccountServices__x/fields/FinancialMarket__c.field-meta.xml
<CustomField>
    <fullName>FinancialMarket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FinancialMarket</description>
    <externalDeveloperName>FinancialMarket</externalDeveloperName>
    <label>FinancialMarket</label>
    <type>Checkbox</type>
</CustomField>