force-app/main/default/objects/IBM_AccountServices__x/fields/InternetUser__c.field-meta.xml
<CustomField>
    <fullName>InternetUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>InternetUser</description>
    <externalDeveloperName>InternetUser</externalDeveloperName>
    <label>InternetUser</label>
    <type>Checkbox</type>
</CustomField>