force-app/main/default/objects/IBM_AccountServices__x/fields/MobileAppUser__c.field-meta.xml
<CustomField>
    <fullName>MobileAppUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MobileAppUser</description>
    <externalDeveloperName>MobileAppUser</externalDeveloperName>
    <label>MobileAppUser</label>
    <type>Checkbox</type>
</CustomField>