force-app/main/default/objects/IBM_AccountServices__x/fields/OnTime__c.field-meta.xml
<CustomField>
    <fullName>OnTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OnTime</description>
    <externalDeveloperName>OnTime</externalDeveloperName>
    <label>OnTime</label>
    <type>Checkbox</type>
</CustomField>