force-app/main/default/objects/IBM_AccountServices__x/fields/PoalimInternetUser__c.field-meta.xml
<CustomField>
    <fullName>PoalimInternetUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PoalimInternetUser</description>
    <externalDeveloperName>PoalimInternetUser</externalDeveloperName>
    <label>PoalimInternetUser</label>
    <type>Checkbox</type>
</CustomField>