force-app/main/default/objects/IBM_AccountServices__x/fields/PoalimPhone__c.field-meta.xml
<CustomField>
    <fullName>PoalimPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PoalimPhone</description>
    <externalDeveloperName>PoalimPhone</externalDeveloperName>
    <label>PoalimPhone</label>
    <type>Checkbox</type>
</CustomField>