force-app/main/default/objects/IBM_AccountServices__x/fields/UpCardUser__c.field-meta.xml
<CustomField>
    <fullName>UpCardUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>UpCardUser</description>
    <externalDeveloperName>UpCardUser</externalDeveloperName>
    <label>UpCardUser</label>
    <type>Checkbox</type>
</CustomField>